<resources>
    <string name="app_name">Brain-Alarm</string>
    <string name="fav_coun">PaginaSfide</string>
    <string name="nomeSveglia">Nome Sveglia</string>
    <string name="login">Login</string>
    <string name="registrazione">Registrazione</string>
    <string name="registrati">Registrati</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Hai dimenticato la password?</string>
    <string name="googleLogin">login Google</string>
    <string name="nuovoAccount">Nuovo account</string>
    <string name="registra">Registra</string>
    <string name="conferma">CONFERMA</string>
    <string name="annulla">ANNULLA</string>
    <string name="suono">Suono</string>
    <string name="vibrazione">Vibrazione</string>
    <string name="posticipa">Posticipa</string>
    <string name="classica">CLASSICA</string>
    <string name="sfida">SFIDA</string>
    <string name="impostazioni">Impostazioni</string>
    <string name="suoni">Suoni</string>
    <string name="notizie">Notizie</string>
    <string name="profilo">Profilo</string>
    <string name="home">Home</string>
    <string name="elimina">Elimina</string>
    <string name="elencoSveglie">Le tue sveglie</string>
    <string name="cancella">Cancella</string>
    <string name="invia">Invia</string>
    <string name="missioni">Missioni</string>
    <string name="modifica">Modifica</string>
    <string name="calcolatrice">Calcolatrice</string>
    <string name="memory">Memory</string>
    <string name="scrivere">Scrivere</string>
    <string name="tris">Tris</string>
    <string name="passi">Passi</string>
    <string name="iTuoiSuoni">Le tue suonerie</string>
    <string name="salva">Salva</string>
    <string name="nome">Ciao user</string>
    <string name="nomeImpostazioni">Nome: </string>
    <string name="statoImpostato">Stato impostato:</string>
    <string name="impostaStato">Scegli lo stato:</string>
    <string name="impostaNome">Scegli il tuo nome:</string>
    <string name="Sì">Sì </string>
    <string name="No">No </string>
    <string name="NussunaSvegliaAttiva">Nessuna sveglia attiva </string>
    <string name="Gioca">Gioca</string>
    <string name="Interrompi">Interrompi</string>
    <string name="Posticipa">Posticipa</string>
    <string name="list_size_message">La dimensione della lista è: </string>

    <string name="mxModalità">Devi scegliere la modalità della sveglia (classica o sfida)!</string>
    <string name="mxStato">Stato salvato</string>
    <string name="mxSfida">Devi scegliere almeno una sfida!</string>
    <string name="inserisci">Inserisci la soluzione</string>

    <string name="alert_text_country_of_interest">Choose at least one country of interest</string>
    <string name="alert_text_topic_of_interest">Choose at least one topic of interest</string>

    <string name="check_login_data_message">Check the data you inserted</string>


    <string name="nav_drawer_subtitle">Stay tuned for news from the world</string>

    <string name="error_email">Insert a valid email address</string>
    <string name="error_password">Password should be at least 6 characters</string>

    <string name="error_user_collision_message">L\'indirizzo email è già in uso</string>

    <string name="error_retrieving_news">Error in retrieving the news</string>
    <string name="api_key_error">API Key not valid or maximum number of requests reached</string>
    <string name="unexpected_error">Unexpected error</string>

    <string name="fav_content_description">Add the news to the favorite list</string>
    <string name="fav_delete_content_description">Remove the news from the favorite list</string>

    <string name="news_added_to_favorite_list_message">News added to the favorite list</string>
    <string name="news_removed_from_favorite_list_message">News removed from the favorite list</string>

    <!-- Content Description Strings -->
    <string name="content_description_fav_addition">Aggiungi la news alla lista dei preferiti</string>
    <string name="content_description_fav_delete">Rimuovi la news dalla lista dei preferiti</string>
    <string name="content_description_news_cover_image">Immagine di copertina della news</string>


    <string-array name="country_array">
        <item>@string/francia</item>
        <item>@string/germania</item>
        <item>@string/italia</item>
        <item>@string/uk</item>
        <item>@string/us</item>
    </string-array>


    <string name="francia">Francia</string>
    <string name="germania">Germania</string>
    <string name="italia">Italia</string>
    <string name="uk">Uk</string>
    <string name="us">Usa</string>

    <string-array name="suoni_array">
        <item>@string/classicaSuono</item>
        <item>@string/pianoforte</item>
        <item>@string/radar</item>
        <item>@string/dolce</item>
        <item>@string/digitale</item>
    </string-array>

    <string name="classicaSuono">Classica</string>
    <string name="pianoforte">Pianoforte</string>
    <string name="radar">Radar</string>
    <string name="dolce">Dolce</string>
    <string name="digitale">Digitale</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
