<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/left_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="20dp" />

            <ImageView
                android:id="@+id/logo"
                android:layout_width="279dp"
                android:layout_height="208dp"
                android:layout_marginTop="44dp"
                android:contentDescription="logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo"
                tools:layout_editor_absoluteX="0dp">

                <TextView
                    android:id="@+id/textview_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="@string/login"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="34sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_layout_email"
                    android:layout_width="345dp"
                    android:layout_height="108dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="24dp"

                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_input_edit_text_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="24dp"
                    app:errorEnabled="true"
                    app:passwordToggleEnabled="true"
                    app:startIconDrawable="@drawable/key">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_input_edit_text_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/button_forgot_password"
                    style="@style/Widget.App.Button.TextButtonFucsia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/forgot_password"
                    android:textSize="14sp"
                    app:textAllCaps="false" />

                <Button
                    android:id="@+id/button_login"
                    style="@style/Widget.Material3.Button.ElevatedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    android:backgroundTint="@color/fucsia"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:rippleColor="@color/azzurro" />

                <RelativeLayout
                    android:id="@+id/relative_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="20dp">

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="24dp"
                        android:layout_toStartOf="@id/textview_or"
                        android:background="@color/grigioScuro" />

                    <TextView
                        android:id="@+id/textview_or"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:text="o" />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="24dp"
                        android:layout_toEndOf="@id/textview_or"
                        android:background="@color/grigioScuro" />

                </RelativeLayout>

                <Button
                    android:id="@+id/button_google_login"
                    style="@style/Widget.Material3.Button.ElevatedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/googleLogin"
                    android:textColor="@color/fucsia"
                    android:textSize="14sp"
                    app:backgroundTint="@color/white"
                    app:icon="@drawable/googleg_standard_color_18"
                    app:iconGravity="textStart"
                    app:iconTint="@null" />

                <TextView
                    android:id="@+id/textview_new_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/nuovoAccount" />

                <Button
                    android:id="@+id/button_register"
                    style="@style/Widget.App.Button.TextButtonFucsia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/registra"
                    android:textSize="14sp"
                    app:textAllCaps="false" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>