<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SuoniFragment">

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background">


                        <LinearLayout
                            android:id="@+id/linearLayout2"
                            android:layout_width="334dp"
                            android:layout_height="269dp"
                            android:layout_marginTop="84dp"
                            android:background="@drawable/background_navbar"
                            android:orientation="vertical"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.493"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">


                                <TextView
                                    android:id="@+id/iTuoiSuoni"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="20dp"
                                    android:text="@string/iTuoiSuoni"
                                    android:textAlignment="center"
                                    android:textColor="@color/white"
                                    android:textSize="20dp" />

                                <com.google.android.material.chip.Chip
                                    android:id="@+id/chipVibr"
                                    android:layout_width="243dp"
                                    android:layout_height="wrap_content"
                                    android:checkable="true"
                                    app:checkedIcon="@drawable/impostazioni"
                                    android:text="@string/vibrazione"
                                    />


                        </LinearLayout>

                        <Button
                            android:id="@+id/salvaSuono"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="60dp"
                            android:text="@string/salva"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

                        <Button
                            android:id="@+id/maps"
                            android:layout_width="147dp"
                            android:layout_height="88dp"
                            android:layout_marginTop="23dp"
                            android:backgroundTint="@color/azzurro"
                            android:text="maps"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/salvaSuono" />

                </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>